fix layout：Collapse点击区域无效

--- a/src/layouts/less/Layout.less
+++ b/src/layouts/less/Layout.less
@@ -105,10 +105,12 @@
   z-index: 9;
   height: 50px;
   line-height: 50px;
-  margin-left: 24px;
+  margin-left: 64px;
   padding-left: 0;
   padding-top: 0 !important;
   padding-bottom: 0 !important;
+  margin-top: 0 !important;
+  margin-right: 0 !important;
 
   & > div {
     line-height: 50px;
